# cabal-buildinfo-example

./: README.md  cabal-buildinfo-example.cabal  configure  flake.nix
app/: Main.hs
src/: MyLib.hs
